Add GLM CMake Find Module

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -12,10 +12,12 @@ set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/CMake")
 find_package(OpenGL REQUIRED)
 find_package(GLEW 2.1.0 REQUIRED)
 find_package(GLFW 3.2.1 REQUIRED)
+find_package(GLM REQUIRED)
 find_package(Threads REQUIRED)
 
 
 INCLUDE_DIRECTORIES (${GLFW_INCLUDE_DIR})
+INCLUDE_DIRECTORIES (${GLM_INCLUDE_DIRS})
 
 set(MXD_SOURCES
   mxd.cpp
