Add shader_program component

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -19,6 +19,7 @@ set(MXD_SOURCES
   geometry.cpp
   shader.cpp
   window.cpp
+  shader_program.cpp
   )
 
 set(MXD_HEADERS
@@ -26,6 +27,7 @@ set(MXD_HEADERS
   geometry.hpp
   shader.hpp
   window.hpp
+  shader_program.hpp
 )
 
 add_library(mxd
@@ -59,6 +61,7 @@ set(MXD_UNIT_TESTS
   shader.t.cpp
   geometry.t.cpp
   window.t.cpp
+  shader_program.t.cpp
   )
 
 function(make_mxd_test source)
