Add line class files

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -26,6 +26,7 @@ set(MXD_SOURCES
   program.cpp
   duration.cpp
   time_point.cpp
+  line.cpp
   )
 
 set(MXD_HEADERS
@@ -36,6 +37,7 @@ set(MXD_HEADERS
   program.hpp
   duration.hpp
   time_point.hpp
+  line.hpp
 )
 
 add_library(mxd
@@ -68,6 +70,7 @@ set(MXD_UNIT_TESTS
   program.t.cpp
   duration.t.cpp
   time_point.t.cpp
+  line.t.cpp
   )
 
 function(make_mxd_test source)
