--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -27,6 +27,7 @@ set(MXD_SOURCES
   duration.cpp
   time_point.cpp
   line.cpp
+  ellipse.cpp
   )
 
 set(MXD_HEADERS
@@ -38,6 +39,7 @@ set(MXD_HEADERS
   duration.hpp
   time_point.hpp
   line.hpp
+  ellipse.cpp
 )
 
 add_library(mxd
@@ -71,6 +73,7 @@ set(MXD_UNIT_TESTS
   duration.t.cpp
   time_point.t.cpp
   line.t.cpp
+  ellipse.t.cpp
   )
 
 function(make_mxd_test source)
